--- a/src/index.css
+++ b/src/index.css
@@ -1839,7 +1839,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    bottom: 13rem;
+    top: -5.3rem;
     min-height: 85vh;
 }
 
@@ -1848,7 +1848,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    bottom: 13rem;
+    top: 0.5rem;
     min-height: 85vh;
 }
 
