--- a/src/index.css
+++ b/src/index.css
@@ -1848,7 +1848,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    top: 0i.5rem;
+    top: 1rem;
     min-height: 85vh;
 }
 
