--- a/src/index.css
+++ b/src/index.css
@@ -516,17 +516,24 @@
     max-width: 320px;
   }
 
+  .First-Background {
+    background-color: green;
+    height: 100vh;
+  }
+
   .Second-Background {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     top: 2rem;
+    height: 100vh;
+    background-color: red;
   }
 
   .title {
     position: relative;
-    top: 20rem;
+    top: 2rem;
     font-size: 35px;
     color: #fff;
     left: 2rem;
@@ -547,7 +554,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    bottom: 2rem;
+    top: -1.5rem;
   }
 
   .Date p {
@@ -571,6 +578,7 @@
     width: 18rem;
     position: relative;
     right: 0.8rem;
+    top: 0.5rem;
   }
 
   .days1 {
@@ -629,12 +637,20 @@
     font-size: 15px;
   }
 
-  .Flowers img {
-    width: 13rem;
+    .Flowers img {
+    width: 15rem;
     position: relative;
-    left: 0.5rem;
-    top: 1.5rem;
+    left: -5rem;
+    top: 5.7rem;
   }
+
+    .Flowers  {
+    width: 15rem;
+    position: relative;
+    left: 5rem;
+    bottom: 3.2rem;
+  }
+
 
   .Third-Background {
     display: flex;
@@ -642,13 +658,18 @@
     align-items: center;
     position: relative;
     left: 0rem;
-    top: -2.5rem;
+    top: 2rem;
+    height: 100vh;
+    background-color: blue;
   }
 
   .Schedule {
     font-size: 55px;
     position: relative;
-    left: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 3rem;
   }
 
   .Schedule1 {
@@ -683,13 +704,14 @@
     width: 18rem;
     position: relative;
     left: 2rem;
+    bottom: 2.5rem;
   }
 
   .Cheers {
     width: 18rem;
     position: relative;
     left: 2rem;
-    top: 0.7rem;
+    top: 0.2rem;
   }
 
   .CereText {
@@ -738,25 +760,28 @@
     width: 35rem;
   }
 
-  .Flowers2 img {
-    width: 13rem;
+    .Flowers2 img {
+    width: 15rem;
     position: relative;
-    top: 2rem;
+    top: 2.4rem;
   }
 
   .Fourth-Background {
     position: relative;
     left: 0rem;
-    top: -4.8rem;
+    top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 90vh;
+    background-color: gray;
   }
 
   .DressCode {
     position: relative;
     left: -1.6rem;
     width: 15rem;
+    bottom: 8rem;
   }
 
   .DressCode p {
@@ -767,16 +792,18 @@
   .Formal {
     font-size: 13px;
     position: relative;
-    top: 2rem;
+    top: -6rem;
   }
 
   .Traje {
     position: relative;
     right: 0.5rem;
+    bottom: 7.5rem;
   }
 
   .Traje img {
     width: 4.5rem;
+
   }
 
   .Traje p {
@@ -786,6 +813,7 @@
   .Dress {
     position: relative;
     left: 0.5rem;
+    bottom: 7.5rem;
   }
 
   .Dress img {
@@ -799,22 +827,35 @@
   .Reservation {
     font-size: 16px;
     position: relative;
-    top: 1.1rem;
+    top: -5.1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
-  .Flowers3 {
+     .Flowers3 img {
+    width: 15rem;
     position: relative;
-    top: 2.7rem;
+    top: -3.1rem;
+  } 
+
+
+  .Sixth-Background {
+    height: 66vh;
+    background-color: orange;
+    position: relative;
+    top: -8.7rem;
   }
 
   .Presents {
     width: 18rem;
     position: relative;
-    top: 4rem;
+    top: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 1rem;
   }
 
   .Presents .p-presents {
@@ -837,23 +878,32 @@
 
   .liverpool {
     position: relative;
-    left: 1.2rem;
+    left: 5rem;
     top: 1.5rem;
   }
 
   .amazon {
     position: relative;
     top: 1.5rem;
-    right: 1rem;
+    right: 5rem;
+  }
+
+  .Flowers4 img  {
+    width: 15rem;
+    position: relative;
+    left: 6rem;
+    bottom: 0.7rem;
   }
 
   .Fifth-Background {
     position: relative;
     left: 0rem;
-    top: 2.5rem;
+    top: -8.7rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    background-color: aqua;
   }
 
   .funny img {
@@ -865,6 +915,7 @@
     position: relative;
     left: 0rem;
     width: 18rem;
+    bottom: 2.3rem;
   }
 
   .funny .attendance {
@@ -901,7 +952,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 0rem;
+    top: -3rem;
   }
 
   .Form form {
@@ -1006,6 +1057,7 @@
     position: relative;
     left: 0rem;
     width: 18rem;
+    bottom: 3rem;
   }
 
   .funny1 p {
@@ -1017,7 +1069,8 @@
 
   .funny1 img {
     position: relative;
-    top: 0.5rem;
+    top: 2rem;
+    width: 15rem;
   }
 }
 
